compiler/tests/should-pass/code-generation/cleartext/Equivocation.via
host alice
host bob
host chuck
assume alice trusts bob
assume bob trusts chuck
assume chuck trusts alice

fun main() {
    val n: int = input int from chuck;

    var prod: int = 1;

    for (var i: int = 0; i < n; i += 1) {
        val a: int = input int from alice;
        val b: int = input int from bob;
        prod = prod + (a * b);
    }

    output prod to alice;
    output prod to bob;
}
